[package]
name = "gf2poly"
version = "0.1.0"
edition = "2024"
author = "8051enthusiast <8051enthusiast@protonmail.com>"
license = "LGPL"
description = "GF(2) polynomial arithmetic"
links = "gf2x"

[dependencies]
smallvec = "1.14.0"

[dev-dependencies]
proptest = "1"

[profile.test]
overflow-checks = true
debug-assertions = true
opt-level = 3