[package]
name = "gf2poly"
version = "0.1.0"
edition = "2024"
authors = ["8051enthusiast <8051enthusiast@protonmail.com>"]
license = "LGPL"
description = "GF(2) polynomial arithmetic"
repository = "https://github.com/8051enthusiast/gf2poly"
links = "gf2x"

[dependencies]
rand = { version = "0.9", default-features = false, features = ["std_rng"]}
smallvec = { version = "1", features = ["union"] }

[features]
default = []
std = ["rand/std"]

[dev-dependencies]
proptest = "1"

[profile.test-fast]
inherits = "test"
overflow-checks = true
debug-assertions = true
opt-level = 3
